--- a/index.css
+++ b/index.css
@@ -1,23 +1,45 @@
 *{
-  margin: 0;
+  margin: 0px;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Texturina', serif;
 }
 
 body{
+
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  height: 150vh;
 }
 
 form{
+  margin-top: 50px;
   filter: drop-shadow(0 2px 6px #000);
 }
 
 .cards{
+  position: absolute;
+  width: 330px;
   background-color:  #c3bcbc1a;
+}
+.front, .back{
+  position: absolute;
+  width: 330px;
+  backface-visibility: hidden;
+  transition: transition 1s linear;
+}
+
+.front {
+  transform: rotateY(0deg);
+}
+
+.back{
+  transform: rotateY(180deg);
+}
+
+
+.cardsChange {
+  transform: rotateY(0deg);
 }
 
 .results{
@@ -25,7 +47,7 @@ form{
   flex-flow: column;
   background: linear-gradient(45deg, #b03e48 , #8d2948);
   height: 150px;
-  width: 300px;
+  width: 330px;
   border: none;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
