--- a/index.css
+++ b/index.css
@@ -5,8 +5,24 @@
   font-family: 'Texturina', serif;
 }
 
+html{
+  --bg: #0e0e0e;
+  --bg1: #1d202a;
+  --color: #fff;
+  --hover_color: red;
+}
+body[data-theme="light"]{
+  transition: .4s all ease-in;
+  --bg: #f1f1f1;
+  --color: #000;
+}
+.btn[data-theme="light"]{
+  transition: .4s all ease-in;
+  --bg1: #d1d5da;
+  --color: #000;
+}
 body{
-
+  background-color: var(--bg);
   display: flex;
   justify-content: center;
   height: 150vh;
@@ -46,16 +62,59 @@ form{
   display: flex;
   flex-flow: column;
   background: linear-gradient(45deg, #b03e48 , #8d2948);
-  height: 150px;
+  height: 170px;
   width: 330px;
   border: none;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
+
+
+.switch{
+position: relative;
+}
+input[type="checkbox"]{
+  width: 70px;
+  height: 30px;
+  margin-left:  20px;
+  margin-top: 20px;
+  background: transparent;
+  -webkit-appearance: none;
+  border-radius: 99999px;
+  border: 3.5px solid #3a1d6d;
+}
+input[type="checkbox"]:checked{
+  border-color: #d1d5da;
+  transition: .4s all ease-in-out;
+}
+input[type="checkbox"]::before{
+  content: '\f186';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 600;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 37px;
+  height: 37px;
+  background: #2f363d;
+  border-radius: 50%;
+  transform: scale(-1.05) rotate(60deg);
+  color: blue;
+  transition: all .4s linear;
+}
+input[type="checkbox"]:checked:before{
+  left:70px;
+  color: #f8e3a1;
+  background: #6e40c9;
+}
+
 .result1{
   background: linear-gradient(45deg, #b03e48 , #8d2948);
   text-align: right;
-  margin-top: 15px;
   padding: 10px;
   height: 40px;
   font-size: 20px;
@@ -87,11 +146,11 @@ form{
 
   font-size: 25px;
   font-weight: 700;
-  background-color: #1d202a;
   border: 1px solid #c3bcbc1a;
 }
 
+
 .btn:hover{
-  background-color: red;
-  color: #fff;
+  background-color: var(--hover_color);
+   color: white;
 }
