--- a/index.css
+++ b/index.css
@@ -78,6 +78,7 @@ input[type="checkbox"]{
   height: 30px;
   margin-left:  20px;
   margin-top: 20px;
+  outline: none;
   background: transparent;
   -webkit-appearance: none;
   border-radius: 99999px;
